# engine

./: CMakeLists.txt  README.md
Engine/: Camera.cpp  Deimgui.cpp  Engine.cpp  main.cpp
Engine/include/: Camera.h  Deimgui.h  Engine.h  light.h  shader.h
builc/: CMakeCache.txt  Makefile  cmake_install.cmake  cpp  imgui.ini
builc/Resources/: shader.fs  shader.vs
renderer/: Mesh.cpp  Renderer.cpp
renderer/include/: Mesh.h  Renderer.h
src/: main.cpp  objects.cpp
src/include/: SceneObject.h  light.h  material.h  transform.h
ui/include/: Deimgui.h
